# cmake_sample

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  vcpkg.json
etc/: app.jsonc
include/: main.hpp
libs/comm/: CMakeLists.txt  CMakePresets.json
libs/comm/include/comm/: async_tcp_client.hpp  async_tcp_server.hpp  session.hpp  session_manager.hpp
libs/comm/include/comm/messages/: message.hpp  message_factory.hpp  message_header.hpp  message_register.hpp
libs/comm/include/comm/utilities/: bounded_blocking_queue.hpp
libs/comm/src/: async_tcp_client.cpp  async_tcp_server.cpp  session.cpp  session_manager.cpp
libs/comm/src/messages/: message.cpp  message_factory.cpp  message_header.cpp  message_register.cpp
libs/comm/src/utilities/: bounded_blocking_queue.cpp
libs/core/: CMakeLists.txt  CMakePresets.json
libs/core/include/: core.hpp  general_affairs_officer.hpp  historian.hpp  options.hpp  president.hpp  secretary.hpp  student_council.hpp  treasurer.hpp  vice_president.hpp
libs/core/include/communications/: async_communication.hpp  async_tcp_client.hpp  async_tcp_server.hpp  session.hpp  session_manager.hpp
libs/core/include/core/: historian.hpp  president.hpp  secretary.hpp  student_council.hpp  treasurer.hpp  vice_president.hpp
libs/core/include/core/exceptions/: my_error.hpp  show_help.hpp
libs/core/include/core/settings/: commons.hpp  communications.hpp  i_input_data.hpp  input_file.hpp  options.hpp
libs/core/include/core/utilities/: text_writer_factory.hpp
libs/core/include/exceptions/: my_error.hpp  show_help.hpp
libs/core/include/settings/: commons.hpp  communications.hpp  i_input_data.hpp  input_file.hpp  options.hpp
libs/core/include/utility/: bounded_blocking_queue.hpp
libs/core/src/: core.cpp  general_affairs_officer.cpp  historian.cpp  options.cpp  president.cpp  secretary.cpp  student_council.cpp  treasurer.cpp  vice_president.cpp
libs/core/src/communications/: async_communication.cpp  async_communication.hpp  async_tcp_client.cpp  async_tcp_client.hpp  async_tcp_server.cpp  async_tcp_server.hpp
libs/core/src/exceptions/: my_error.cpp  show_help.cpp
libs/core/src/settings/: commons.cpp  communications.cpp  i_input_data.cpp  input_file.cpp  options.cpp
libs/core/src/utilities/boost/container/: test_writer_factory.cpp
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test_bounded_blocking_queue.cpp  test_main.cpp  test_settings.cpp
tools/: cmake-msvc-x64.cmd
